Aula 3 - Inicial de HTML

--- a/HTML/Fundamentos/inicialHtml.html
+++ b/HTML/Fundamentos/inicialHtml.html
@@ -20,6 +20,9 @@
     <p>sub | sup</p>
     <p>Linguagem Semântica</p>
     <p>Strong | em</p>
+    <p><a href="tabela.html" target="_blank">Explicação tabela</a> |
+    <a href="lista.html" target="_blank">Explicação de Lista</a> |
+    <a href="imagem.html" target="_blank">Explicação de imagem</a></p>
 
     <br><br>
 
