--- a/CSS/PegarSeletores.html
+++ b/CSS/PegarSeletores.html
@@ -5,6 +5,19 @@
     <meta charset="UTF-8">
     <title>Tag Class</title>
     <link rel="stylesheet" href="css/tagCSS.css">
+    <style>
+        [feira='casa'] {
+            background-color: blue;
+            color: yellow;
+        }
+        #aprovados:hover {
+            background-color: yellow;
+            color: blue;
+        }
+        li::first-letter {
+            font-size: 100px;
+        }
+    </style>
 </head>
 
 <body>
